# alenvers

./: .clang-format  .clang-tidy  .gitignore  .projectile  CMakeLists.txt  README.org  compile_commands.json
include/: char_range.hpp  lexer.hpp  lexer_automaton.hpp  lexer_types.hpp  match_char.hpp  token.hpp  util.hpp  visitor.hpp
src/: CMakeLists.txt  \  char32_t_format.cpp  char32_t_format.hpp  fileptr.cpp  fileptr.hpp  lexer.hpp  lisp_interpreter.cpp  sad.hpp  scanner.cpp  scanner.hpp  test.cpp  test1.cpp  test1.hpp  token.cpp  token.hpp
